sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: '<-' expected but ')' found.
    for (j<= 0 to n-2 ){
                      ^AlgBubbleSort1:13: error: illegal start of simple expression
  } 
  ^